feat(system): Add inventory module and perform global code optimization
This commit introduces a major new feature along with numerous global code quality improvements.

Features:
- (cheng-ui) Added an "Inventory Management" module, including pages for item management, stock query, borrowing, scanning, and reports.
- (cheng-ui) Added a new global floating scan button component for easier access.
- (cheng-ui) Integrated the html5-qrcode package for the scanning functionality.

Refactoring & Optimization:
- (system) Refactored dependencies from ISysLogininforService to ISysUninformatively to unify service interfaces.
- (framework) Improved performance in LogAspect by using StringBuilder for log parameter concatenation.
- (framework) Replaced StringBuffer with StringBuilder in RateLimiterAspect.
- (common) Modernized various code sections, such as using isEmpty() instead of length() == 0 and adopting StandardCharsets.
- (system) Added @SerialVersionUID annotations to multiple domain objects for improved serialization stability.
- (generator) Updated code generator templates to use @since instead of @date in Javadocs.

Localization & Wording:
- Globally corrected terminology to align with local conventions (e.g., "asynchronous").
- Standardized terms like "startup program" and "phone number".
- Corrected all instances of Simplified Chinese characters to their Traditional Chinese equivalents.
- Unified question-ending particles in the UI (e.g., changed "吗" to "嗎").

Code Style:
- Standardized brace style for classes and methods across the entire project for better consistency.
- (system) Removed redundant 'public' modifiers from all Mapper interfaces.
- (system) Formatted the toString() methods of several domain objects into a single line.